<resources>
    <string name="app_name">Task Fragment</string>
    <string name="taskTitle">title</string>
    <string name="taskDescription">description</string>
    <string name="status">status</string>
    <string name="next">next</string>
    <string name="detail">detail</string>
    <string name="back_button_pressed">back button pressed</string>
    <string name="request_code_mismatch">request code mismatch</string>
    <string name="pending">Pending</string>
    <string name="complete">Complete</string>
    <string name="submit">Submit</string>
    <string name="prev">Prev</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_task">New Task</string>
    <string name="add">Add</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="choose_image">Choose Image</string>
</resources>
